--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nomemon --exec \"npm test\""
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +14,11 @@
     "express": "^4.16.3",
     "mongodb": "^2.2.35",
     "mongoose": "^5.0.12"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-spies": "^1.0.0",
+    "mocha": "^5.0.5",
+    "supertest": "^3.0.0"
   }
 }
